# cpkg

./: CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  THIRD_PARTY_LICENSES.txt
.cpkg/: test-installed.json
.github/workflows/: nightly.yml  stable-release.yml
apps/: Ztarry.callenflynn.json  brave-browser.brave.json
docs/: index.htm  index.html  stylish.css
docs/contributing/: uploading-apps.html
installer/: build-installer.ps1  install-cpkg.ps1  run-installer.cmd
src/: main.rs
